<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_settings_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <com.famousindiasocialnetwork.view.MontserratTextView
        android:id="@+id/settings_profile_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="8dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_profile_24dp"
        android:drawablePadding="24dp"
        android:drawableTint="@color/colorPrimaryDark"
        android:paddingLeft="32dp"
        android:paddingTop="16dp"
        android:paddingRight="20dp"
        android:paddingBottom="16dp"
        android:text="@string/profile"
        android:textSize="16sp" />

    <com.famousindiasocialnetwork.view.MontserratTextView
        android:id="@+id/settings_push_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_profile_edit"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_notification_gray_24dp"
        android:drawablePadding="24dp"
        android:drawableTint="@color/colorPrimaryDark"
        android:paddingLeft="32dp"
        android:paddingTop="16dp"
        android:paddingRight="20dp"
        android:paddingBottom="16dp"
        android:text="@string/push_notification"
        android:textSize="16sp" />

    <com.famousindiasocialnetwork.view.MontserratTextView
        android:id="@+id/feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_push_notification"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_feedback"
        android:drawablePadding="24dp"
        android:drawableTint="@color/colorPrimaryDark"
        android:paddingLeft="32dp"
        android:paddingTop="16dp"
        android:paddingRight="20dp"
        android:paddingBottom="16dp"
        android:text="Leave feedback"
        android:textSize="16sp" />


    <com.famousindiasocialnetwork.view.MontserratTextView
        android:id="@+id/rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/share"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_thumb_color_primary"
        android:drawablePadding="24dp"
        android:drawableTint="@color/colorPrimaryDark"
        android:paddingLeft="32dp"
        android:paddingTop="24dp"
        android:paddingRight="20dp"
        android:paddingBottom="16dp"
        android:text="Rate us"
        android:textSize="16sp" />

    <com.famousindiasocialnetwork.view.MontserratTextView
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/feedback"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_share_blue_24dp"
        android:drawablePadding="24dp"
        android:drawableTint="@color/colorPrimaryDark"
        android:paddingLeft="32dp"
        android:paddingTop="16dp"
        android:paddingRight="20dp"
        android:paddingBottom="16dp"
        android:text="Share app"
        android:textSize="16sp" />


    <com.famousindiasocialnetwork.view.MontserratTextView
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rate"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_power_settings_purple"
        android:drawablePadding="24dp"
        android:drawableTint="@color/colorPrimaryDark"
        android:paddingLeft="32dp"
        android:paddingTop="16dp"
        android:paddingRight="20dp"
        android:paddingBottom="16dp"
        android:text="@string/logout"
        android:textSize="16sp" />

</RelativeLayout>